gcc/testsuite/rust/rustc/ui/parser/issue-21153.rs
trait MyTrait<T>: Iterator {
    Item = T;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

